# fbx2json

./: .astyle  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Readme.md  fbx2json.py  main.cpp  mesh.py
Classes/: Common.cpp  Common.h  SceneCache.cpp  SceneCache.h  SceneContext.cpp  SceneContext.h
examples/: drillbugtest.fbx
fbx2json.xcodeproj/: project.pbxproj
fbx2json.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: glew.h
samples/: Sahuagin_Weapon.fbx
src/: CMakeLists.txt  Common.cpp  Common.h  FBXExporter.cpp  GLFunctions.cpp  GLFunctions.h  SceneContext.cpp  SceneContext.h  fbx_deformation.cpp  fbx_deformation.h  fbx_exporter.cpp  fbx_exporter.h  fbx_importer.cpp  fbx_importer.h  fbx_parser.cpp  fbx_parser.h  fbx_position.cpp  fbx_position.h  fbx_vbomesh.cpp  fbx_vbomesh.h  main.cpp
src/JsonBox/: CMakeLists.txt
